[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trustloop"
version = "1.0.0"
description = "Python SDK for TrustLoop — governance and audit trail for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["ai", "agents", "governance", "langchain", "crewai", "mcp", "audit", "trustloop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
async     = ["httpx>=0.25.0"]
langchain = ["langchain-core>=0.1.0"]
crewai    = ["crewai>=0.28.0"]
all       = ["httpx>=0.25.0", "langchain-core>=0.1.0", "crewai>=0.28.0"]

[project.urls]
Homepage      = "https://trustloop.live"
Documentation = "https://trustloop.live/docs"
Repository    = "https://github.com/SMJAI/trustloop-python-sdk"
"Bug Tracker" = "https://github.com/SMJAI/trustloop-python-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["trustloop*"]
